@@ -44,6 +44,7 @@ Added Altering Cave encounters
 Added following pokemon
 Added tinting Day/Night cycle
 Added TM case
+Pokemon can evolve mid-battle
 
 3 Superboss battles
 	- Red in Stevens old cave
